# Cupronickel

./: BUILD-INSTALLER.bat  README.md  build-installer.ps1  index.html  package.json  vite.config.js
.github/workflows/: build-installer.yml
docs/: ARCHITECTURE.md
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: exec.rs  main.rs  modules.rs  paths.rs  storage.rs  window.rs
src/lib/core/: api.js  ipc.js  modules.js  settings.js  tabs.js  textext.js
src/lib/mainscreen/: MainScreen.svelte
src/lib/mainscreen/widgets/: CalendarWidget.svelte  ClockWidget.svelte  DDayWidget.svelte  QuoteWidget.svelte
src/lib/modules/calendar/: CalendarView.svelte  module.js
src/lib/modules/card/: CardView.svelte  fsrs.js  module.js
src/lib/modules/code/: CodeView.svelte  module.js
src/lib/modules/graph/: GraphBoard.svelte  GraphView.svelte  module.js  simulation.js
src/lib/modules/memo/: MemoView.svelte  module.js
src/lib/modules/note/: NoteView.svelte  markdown.js  module.js
src/lib/modules/sheet/: SheetView.svelte  module.js
src/lib/modules/textext/: InfoView.svelte  module.js  render.js
src/lib/settings/: Settings.svelte
src/lib/shell/: Sidebar.svelte  TabBar.svelte  Workspace.svelte
