[package]
name = "cupronickel"
version = "1.0.0-alpha"
description = "통합 생산성 소프트웨어"
authors = ["Cupronickel"]
license = "GPL-2.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["dialog-open", "dialog-save", "clipboard-all", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 미설치 모듈을 압축 보관/해제하기 위한 zip 처리
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
